--- a/app/avatar/dev/page.mdx
+++ b/app/avatar/dev/page.mdx
@@ -72,21 +72,21 @@ import CodePreview from '@components/showcase/CodePreview';
 
 ## Design Tokens for Avatar
 
-| **Token**                                 | **Color for**        | **State/Meaning**         | **CSS Selector(s)**                                                |
-| ----------------------------------------- | -------------------- | ------------------------- | ------------------------------------------------------------------ |
-| **--par-color-bg-avatar**                 | Avatar background    | Default background        | `.avatar`, `.avatar-group-overflow`                                |
-| **--par-color-bg-avatar-disabled**        | Avatar background    | Disabled state            | `.avatar.disabled`                                                 |
-| **--par-color-bg-avatar-trigger**         | AvatarTrigger bg     | Avatar trigger background | `.avatar-trigger`                                                  |
-| **--par-color-border-avatar**             | Avatar border        | Default border            | `.avatar`, `.avatar.border`, `.avatar-group-item`                  |
-| **--par-color-border-avatar-alternative** | Avatar border alt    | Alternative border style  | `.avatar.border-alternative`                                       |
-| **--par-color-border-avatar-gray**        | Avatar border gray   | Gray status border        | `.avatar.status-border[data-status-color="gray"]`                  |
-| **--par-color-border-avatar-red**         | Avatar border red    | Red status border         | `.avatar.status-border[data-status-color="red"]`                   |
-| **--par-color-border-avatar-green**       | Avatar border green  | Green status border       | `.avatar.status-border[data-status-color="green"]`                 |
-| **--par-color-border-avatar-yellow**      | Avatar border yellow | Yellow status border      | `.avatar.status-border[data-status-color="yellow"]`                |
-| **--par-color-text-avatar**               | Initials/placeholder | Initials & placeholder    | `.avatar-initials`, `.avatar-placeholder`, `.avatar-overflow-text` |
-| **--par-color-text-avatar-disabled**      | Avatar text          | Disabled state            | `.avatar.disabled`, `.avatar.disabled .avatar-img`                 |
-| **--par-color-text-avatar-trigger**       | AvatarTrigger text   | Avatar trigger text       |                                                                    |
-| **--avatar-group-spacing**                | Group spacing        | Spacing between avatars   | `.avatar-group.direction-row`, `.avatar-group.direction-column`    |
+| **Token**                                 | **Color for**        | **State/Meaning**         |
+| ----------------------------------------- | -------------------- | ------------------------- |
+| **--par-color-bg-avatar**                 | Avatar background    | Default background        |
+| **--par-color-bg-avatar-disabled**        | Avatar background    | Disabled state            |
+| **--par-color-bg-avatar-trigger**         | AvatarTrigger bg     | Avatar trigger background |
+| **--par-color-border-avatar**             | Avatar border        | Default border            |
+| **--par-color-border-avatar-alternative** | Avatar border alt    | Alternative border style  |
+| **--par-color-border-avatar-gray**        | Avatar border gray   | Gray status border        |
+| **--par-color-border-avatar-red**         | Avatar border red    | Red status border         |
+| **--par-color-border-avatar-green**       | Avatar border green  | Green status border       |
+| **--par-color-border-avatar-yellow**      | Avatar border yellow | Yellow status border      |
+| **--par-color-text-avatar**               | Initials/placeholder | Initials & placeholder    |
+| **--par-color-text-avatar-disabled**      | Avatar text          | Disabled state            |
+| **--par-color-text-avatar-trigger**       | AvatarTrigger text   | Avatar trigger text       |
+| **--avatar-group-spacing**                | Group spacing        | Spacing between avatars   |
 
 > _Note: Status border tokens are set via `data-status-color` and mapped to the appropriate color variable. Supported colors: gray, red, green, yellow._
 
