--- a/app/breadcrumb/dev/page.mdx
+++ b/app/breadcrumb/dev/page.mdx
@@ -48,10 +48,10 @@ import CodePreview from '@components/showcase/CodePreview';
 
 ## Design Tokens for Breadcrumb
 
-| **Token**                                   | **Color for**               | **State/Meaning** | **CSS Selector(s)**                  |
-| ------------------------------------------- | --------------------------- | ----------------- | ------------------------------------ |
-| **--par-color-separator-breadcrumb**        | Breadcrumb separator        | Default/Enabled   | `.breadcrumb-item:not(:last-child)`  |
-| **--par-color-text-breadcrumb-item-active** | Active breadcrumb item text | Active/Selected   | `.breadcrumb-item.breadcrumb-active` |
+| **Token**                                   | **Color for**               | **State/Meaning** |
+| ------------------------------------------- | --------------------------- | ----------------- |
+| **--par-color-separator-breadcrumb**        | Breadcrumb separator        | Default/Enabled   |
+| **--par-color-text-breadcrumb-item-active** | Active breadcrumb item text | Active/Selected   |
 
 ## Breadcrumb API Reference
 
