--- a/app/button/dev/page.mdx
+++ b/app/button/dev/page.mdx
@@ -27,11 +27,11 @@ import CodePreview from '@components/showcase/CodePreview';
 
 ## Design Tokens for Button
 
-| **Token**                                                  | **Color for**     | **State/Meaning**                                                                                     | **CSS Selector(s)**          |
-| ---------------------------------------------------------- | ----------------- | ----------------------------------------------------------------------------------------------------- | ---------------------------- |
-| **--par-color-text-button-\<kind\>-\<color\>-\<state\>**   | Button text       | solid, outlined, ghost, glass; neutral, accent, adverse; enabled, hovered, pressed, disabled, pending | `.btn.<kind>.<color>[state]` |
-| **--par-color-bg-button-\<kind\>-\<color\>-\<state\>**     | Button background | solid, outlined, ghost, glass; neutral, accent, adverse; enabled, hovered, pressed, disabled, pending | `.btn.<kind>.<color>[state]` |
-| **--par-color-border-button-\<kind\>-\<color\>-\<state\>** | Button border     | solid, outlined, ghost, glass; neutral, accent, adverse; enabled, hovered, pressed, disabled, pending | `.btn.<kind>.<color>[state]` |
+| **Token**                                                  | **Color for**     | **State/Meaning**                                                                                     |
+| ---------------------------------------------------------- | ----------------- | ----------------------------------------------------------------------------------------------------- |
+| **--par-color-text-button-\<kind\>-\<color\>-\<state\>**   | Button text       | solid, outlined, ghost, glass; neutral, accent, adverse; enabled, hovered, pressed, disabled, pending |
+| **--par-color-bg-button-\<kind\>-\<color\>-\<state\>**     | Button background | solid, outlined, ghost, glass; neutral, accent, adverse; enabled, hovered, pressed, disabled, pending |
+| **--par-color-border-button-\<kind\>-\<color\>-\<state\>** | Button border     | solid, outlined, ghost, glass; neutral, accent, adverse; enabled, hovered, pressed, disabled, pending |
 
 > _Note: Replace `kind` with solid, outlined, ghost, glass; `color` with neutral, accent, adverse; `state` with enabled, hovered, pressed, disabled, pending as appropriate._
 
