--- a/app/content-navigation/dev/page.mdx
+++ b/app/content-navigation/dev/page.mdx
@@ -15,17 +15,17 @@ import CodePreview from '@components/showcase/CodePreview';
 
 ## Design Tokens for ContentNavigation
 
-| **Token**                                                | **Color for**         | **State/Meaning**       | **CSS Selector(s)**                                                  |
-| -------------------------------------------------------- | --------------------- | ----------------------- | -------------------------------------------------------------------- |
-| **--par-color-text-content-navigation-enabled**          | Navigation text color | Default text            | `.content-navigation-item`                                           |
-| **--par-color-text-content-navigation-hovered**          | Navigation text color | On hover                | `.content-navigation-item:hover`                                     |
-| **--par-color-text-content-navigation-pressed**          | Navigation text color | On pressed              | `.content-navigation-item:active`                                    |
-| **--par-color-text-content-navigation-neutral-selected** | Navigation text color | Selected (neutral)      | `.content-navigation-item-active`                                    |
-| **--par-color-text-content-navigation-accent-selected**  | Navigation text color | Selected (accent)       | `.content-navigation.accent .content-navigation-item-active`         |
-| **--par-color-border-content-navigation-enabled**        | Navigation border     | Default border          | `.content-navigation-item::before`                                   |
-| **--par-color-border-content-navigation-active-neutral** | Navigation border     | Active border (neutral) | `.content-navigation-item-active::before`                            |
-| **--par-color-border-content-navigation-active-accent**  | Navigation border     | Active border (accent)  | `.content-navigation.accent .content-navigation-item-active::before` |
-| **--par-color-bg-content-navigation**                    | Navigation background | Background              | `.content-navigation`                                                |
+| **Token**                                                | **Color for**         | **State/Meaning**       |
+| -------------------------------------------------------- | --------------------- | ----------------------- |
+| **--par-color-text-content-navigation-enabled**          | Navigation text color | Default text            |
+| **--par-color-text-content-navigation-hovered**          | Navigation text color | On hover                |
+| **--par-color-text-content-navigation-pressed**          | Navigation text color | On pressed              |
+| **--par-color-text-content-navigation-neutral-selected** | Navigation text color | Selected (neutral)      |
+| **--par-color-text-content-navigation-accent-selected**  | Navigation text color | Selected (accent)       |
+| **--par-color-border-content-navigation-enabled**        | Navigation border     | Default border          |
+| **--par-color-border-content-navigation-active-neutral** | Navigation border     | Active border (neutral) |
+| **--par-color-border-content-navigation-active-accent**  | Navigation border     | Active border (accent)  |
+| **--par-color-bg-content-navigation**                    | Navigation background | Background              |
 
 ---
 
