--- a/app/corner-indicator/dev/page.mdx
+++ b/app/corner-indicator/dev/page.mdx
@@ -19,9 +19,9 @@ import CodePreview from '@components/showcase/CodePreview';
 
 ## Design Tokens for CornerIndicator
 
-| **Token**                                | **Color for** | **State/Meaning**     | **CSS Selector(s)**                                                                          |
-| ---------------------------------------- | ------------- | --------------------- | -------------------------------------------------------------------------------------------- |
-| **--par-color-outline-corner-indicator** | Outline color | Outline for indicator | `.corner-indicator-container.bordered > .badge, .corner-indicator-container.bordered > .dot` |
+| **Token**                                | **Color for** | **State/Meaning**     |
+| ---------------------------------------- | ------------- | --------------------- |
+| **--par-color-outline-corner-indicator** | Outline color | Outline for indicator |
 
 ---
 
