--- a/app/dot/dev/page.mdx
+++ b/app/dot/dev/page.mdx
@@ -15,17 +15,17 @@ import CodePreview from '@components/showcase/CodePreview';
 
 ## Design Tokens for Dot
 
-| **Token**                           | **Color for**  | **State/Meaning** | **CSS Selector(s)** |
-| ----------------------------------- | -------------- | ----------------- | ------------------- |
-| **--par-color-bg-dot-solid-gray**   | Dot background | Gray color        | `.dot.gray`         |
-| **--par-color-bg-dot-solid-orange** | Dot background | Orange color      | `.dot.orange`       |
-| **--par-color-bg-dot-solid-cyan**   | Dot background | Cyan color        | `.dot.cyan`         |
-| **--par-color-bg-dot-solid-violet** | Dot background | Violet color      | `.dot.violet`       |
-| **--par-color-bg-dot-solid-green**  | Dot background | Green color       | `.dot.green`        |
-| **--par-color-bg-dot-solid-red**    | Dot background | Red color         | `.dot.red`          |
-| **--par-color-bg-dot-solid-yellow** | Dot background | Yellow color      | `.dot.yellow`       |
-| **--par-color-bg-dot-solid-blue**   | Dot background | Blue color        | `.dot.blue`         |
-| **--par-color-bg-dot-solid-lime**   | Dot background | Lime color        | `.dot.lime`         |
+| **Token**                           | **Color for**  | **State/Meaning** |
+| ----------------------------------- | -------------- | ----------------- |
+| **--par-color-bg-dot-solid-gray**   | Dot background | Gray color        |
+| **--par-color-bg-dot-solid-orange** | Dot background | Orange color      |
+| **--par-color-bg-dot-solid-cyan**   | Dot background | Cyan color        |
+| **--par-color-bg-dot-solid-violet** | Dot background | Violet color      |
+| **--par-color-bg-dot-solid-green**  | Dot background | Green color       |
+| **--par-color-bg-dot-solid-red**    | Dot background | Red color         |
+| **--par-color-bg-dot-solid-yellow** | Dot background | Yellow color      |
+| **--par-color-bg-dot-solid-blue**   | Dot background | Blue color        |
+| **--par-color-bg-dot-solid-lime**   | Dot background | Lime color        |
 
 ---
 
