--- a/app/inline-link/dev/page.mdx
+++ b/app/inline-link/dev/page.mdx
@@ -19,16 +19,16 @@ import CodePreview from '@components/showcase/CodePreview';
 
 ## Design Tokens for InlineLink
 
-| **Token**                               | **Color for** | **State/Meaning** | **CSS Selector(s)**              |
-| --------------------------------------- | ------------- | ----------------- | -------------------------------- |
-| **--color-text-link-standard-enabled**  | Standard link | Enabled           | `.inline-link.standard`          |
-| **--color-text-link-standard-hovered**  | Standard link | Hovered           | `.inline-link.standard:hover`    |
-| **--color-text-link-standard-focused**  | Standard link | Focused           | `.inline-link.standard:focus`    |
-| **--color-text-link-standard-disabled** | Standard link | Disabled          | `.inline-link.standard.disabled` |
-| **--color-text-link-neutral-enabled**   | Neutral link  | Enabled           | `.inline-link.neutral`           |
-| **--color-text-link-neutral-hovered**   | Neutral link  | Hovered           | `.inline-link.neutral:hover`     |
-| **--color-text-link-neutral-focused**   | Neutral link  | Focused           | `.inline-link.neutral:focus`     |
-| **--color-text-link-neutral-disabled**  | Neutral link  | Disabled          | `.inline-link.neutral.disabled`  |
+| **Token**                               | **Color for** | **State/Meaning** |
+| --------------------------------------- | ------------- | ----------------- |
+| **--color-text-link-standard-enabled**  | Standard link | Enabled           |
+| **--color-text-link-standard-hovered**  | Standard link | Hovered           |
+| **--color-text-link-standard-focused**  | Standard link | Focused           |
+| **--color-text-link-standard-disabled** | Standard link | Disabled          |
+| **--color-text-link-neutral-enabled**   | Neutral link  | Enabled           |
+| **--color-text-link-neutral-hovered**   | Neutral link  | Hovered           |
+| **--color-text-link-neutral-focused**   | Neutral link  | Focused           |
+| **--color-text-link-neutral-disabled**  | Neutral link  | Disabled          |
 
 ---
 
