--- a/app/pagination/dev/page.mdx
+++ b/app/pagination/dev/page.mdx
@@ -60,22 +60,22 @@ import CodePreview from '@components/showcase/CodePreview';
 
 ## Design Tokens for Pagination
 
-| **Token**                                                  | **Color for**              | **State/Meaning**  | **CSS Selector(s)**                                                                                                                                                          |
-| ---------------------------------------------------------- | -------------------------- | ------------------ | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| **--par-color-bg-pagination-item-enabled**                 | Pagination item background | Default/Enabled    | `.pagination-item`                                                                                                                                                           |
-| **--par-color-bg-pagination-item-hovered**                 | Pagination item background | Hovered            | `.pagination-item:hover`                                                                                                                                                     |
-| **--par-color-bg-pagination-item-selected-neutral**        | Pagination item background | Selected (neutral) | `.pagination.neutral .pagination-item.active`                                                                                                                                |
-| **--par-color-bg-pagination-item-selected-accent**         | Pagination item background | Selected (accent)  | `.pagination.accent .pagination-item.active`                                                                                                                                 |
-| **--par-color-bg-pagination-item-disabled**                | Pagination item background | Disabled           | `.pagination-item:disabled`                                                                                                                                                  |
-| **--par-color-text-pagination-item-page-enabled**          | Pagination item text       | Default/Enabled    | `.pagination-item`                                                                                                                                                           |
-| **--par-color-text-pagination-item-page-hovered**          | Pagination item text       | Hovered            | `.pagination-item:hover`                                                                                                                                                     |
-| **--par-color-text-pagination-item-page-selected-neutral** | Pagination item text       | Selected (neutral) | `.pagination.neutral .pagination-item.active`                                                                                                                                |
-| **--par-color-text-pagination-item-page-selected-accent**  | Pagination item text       | Selected (accent)  | `.pagination.accent .pagination-item.active`                                                                                                                                 |
-| **--par-color-text-pagination-item-page-disabled**         | Pagination item text       | Disabled           | `.pagination-item:disabled`                                                                                                                                                  |
-| **--par-color-text-pagination-item-control-enabled**       | Control button text        | Default/Enabled    | `.pagination-item.pagination-start, .pagination-item.pagination-prev, .pagination-item.pagination-end, .pagination-item.pagination-next`                                     |
-| **--par-color-text-pagination-item-control-disabled**      | Control button text        | Disabled           | `.pagination-item.pagination-start:disabled, .pagination-item.pagination-prev:disabled, .pagination-item.pagination-end:disabled, .pagination-item.pagination-next:disabled` |
-| **--par-color-border-pagination-item**                     | Pagination item border     | Default/Enabled    | `.pagination, .pagination-item, .pagination-separator`                                                                                                                       |
-| **--par-color-border-pagination-item-disabled**            | Pagination item border     | Disabled           | `.pagination-item:disabled`                                                                                                                                                  |
+| **Token**                                                  | **Color for**              | **State/Meaning**  |
+| ---------------------------------------------------------- | -------------------------- | ------------------ |
+| **--par-color-bg-pagination-item-enabled**                 | Pagination item background | Default/Enabled    |
+| **--par-color-bg-pagination-item-hovered**                 | Pagination item background | Hovered            |
+| **--par-color-bg-pagination-item-selected-neutral**        | Pagination item background | Selected (neutral) |
+| **--par-color-bg-pagination-item-selected-accent**         | Pagination item background | Selected (accent)  |
+| **--par-color-bg-pagination-item-disabled**                | Pagination item background | Disabled           |
+| **--par-color-text-pagination-item-page-enabled**          | Pagination item text       | Default/Enabled    |
+| **--par-color-text-pagination-item-page-hovered**          | Pagination item text       | Hovered            |
+| **--par-color-text-pagination-item-page-selected-neutral** | Pagination item text       | Selected (neutral) |
+| **--par-color-text-pagination-item-page-selected-accent**  | Pagination item text       | Selected (accent)  |
+| **--par-color-text-pagination-item-page-disabled**         | Pagination item text       | Disabled           |
+| **--par-color-text-pagination-item-control-enabled**       | Control button text        | Default/Enabled    |
+| **--par-color-text-pagination-item-control-disabled**      | Control button text        | Disabled           |
+| **--par-color-border-pagination-item**                     | Pagination item border     | Default/Enabled    |
+| **--par-color-border-pagination-item-disabled**            | Pagination item border     | Disabled           |
 
 ---
 
