--- a/app/radio/dev/page.mdx
+++ b/app/radio/dev/page.mdx
@@ -27,14 +27,14 @@ import CodePreview from '@components/showcase/CodePreview';
 
 ## Design Tokens for Radio
 
-| **Token**                                   | **Color for** | **State/Meaning**  | **CSS Selector(s)**                       |
-| ------------------------------------------- | ------------- | ------------------ | ----------------------------------------- |
-| **--par-color-icon-radio-enabled**          | Radio icon    | Enabled            | `.par-radio:enabled .radio-icon`          |
-| **--par-color-icon-radio-disabled**         | Radio icon    | Disabled           | `.par-radio:disabled .radio-icon`         |
-| **--par-color-icon-radio-neutral-selected** | Radio icon    | Checked (neutral)  | `.par-radio.neutral:checked .radio-icon`  |
-| **--par-color-icon-radio-neutral-disabled** | Radio icon    | Disabled (neutral) | `.par-radio.neutral:disabled .radio-icon` |
-| **--par-color-icon-radio-accent-selected**  | Radio icon    | Checked (accent)   | `.par-radio.accent:checked .radio-icon`   |
-| **--par-color-icon-radio-accent-disabled**  | Radio icon    | Disabled (accent)  | `.par-radio.accent:disabled .radio-icon`  |
+| **Token**                                   | **Color for** | **State/Meaning**  |
+| ------------------------------------------- | ------------- | ------------------ |
+| **--par-color-icon-radio-enabled**          | Radio icon    | Enabled            |
+| **--par-color-icon-radio-disabled**         | Radio icon    | Disabled           |
+| **--par-color-icon-radio-neutral-selected** | Radio icon    | Checked (neutral)  |
+| **--par-color-icon-radio-neutral-disabled** | Radio icon    | Disabled (neutral) |
+| **--par-color-icon-radio-accent-selected**  | Radio icon    | Checked (accent)   |
+| **--par-color-icon-radio-accent-disabled**  | Radio icon    | Disabled (accent)  |
 
 ---
 
