--- a/app/spinner/dev/page.mdx
+++ b/app/spinner/dev/page.mdx
@@ -25,11 +25,11 @@ import CodePreview from '@components/showcase/CodePreview';
 
 ## Design Tokens for Spinner
 
-| **Token**                                          | **Color for**      | **State/Meaning** | **CSS Selector(s)** |
-| -------------------------------------------------- | ------------------ | ----------------- | ------------------- |
-| **--par-color-stroke-spinner-interactive-neutral** | Spinner arc        | Neutral           | `.spinner.neutral`  |
-| **--par-color-stroke-spinner-interactive-accent**  | Spinner arc        | Accent            | `.spinner.accent`   |
-| **--par-color-stroke-spinner-inactive**            | Spinner background | Inactive          | `.spinner`          |
+| **Token**                                          | **Color for**      | **State/Meaning** |
+| -------------------------------------------------- | ------------------ | ----------------- |
+| **--par-color-stroke-spinner-interactive-neutral** | Spinner arc        | Neutral           |
+| **--par-color-stroke-spinner-interactive-accent**  | Spinner arc        | Accent            |
+| **--par-color-stroke-spinner-inactive**            | Spinner background | Inactive          |
 
 ---
 
