--- a/app/switch/dev/page.mdx
+++ b/app/switch/dev/page.mdx
@@ -17,22 +17,22 @@ import CodePreview from '@components/showcase/CodePreview';
 
 ## Design Tokens for Switch
 
-| **Token**                                               | **Color for**           | **State/Meaning**  | **CSS Selector(s)**                                  |
-| ------------------------------------------------------- | ----------------------- | ------------------ | ---------------------------------------------------- |
-| **--par-color-bg-switch-target-handle**                 | Switch thumb background | Enabled            | `.switch-target`                                     |
-| **--par-color-bg-switch-target-handle-disabled**        | Switch thumb background | Disabled           | `.switch-target`                                     |
-| **--par-color-bg-switch-target-track-uncheck**          | Switch track background | Unchecked          | `.switch`                                            |
-| **--par-color-bg-switch-target-track-uncheck-disabled** | Switch track background | Unchecked Disabled | `.switch:disabled`                                   |
-| **--par-color-bg-switch-target-track-check**            | Switch track background | Checked            | `.switch[aria-checked='true']`                       |
-| **--par-color-bg-switch-target-track-check-disabled**   | Switch track background | Checked Disabled   | `.switch:disabled[aria-checked='true']`              |
-| **--par-color-border-switch-unchecked**                 | Switch border           | Unchecked          | `.switch`                                            |
-| **--par-color-border-switch-checked**                   | Switch border           | Checked            | `.switch[aria-checked='true']`                       |
-| **--par-color-border-switch-unchecked-disabled**        | Switch border           | Unchecked Disabled | `.switch:disabled`                                   |
-| **--par-color-border-switch-checked-disabled**          | Switch border           | Checked Disabled   | `.switch:disabled[aria-checked='true']`              |
-| **--par-color-text-switch-target-unchecked-enabled**    | Switch icon             | Unchecked          | `.switch-icon`                                       |
-| **--par-color-text-switch-target-checked-enabled**      | Switch icon             | Checked            | `.switch-icon`                                       |
-| **--par-color-text-switch-target-unchecked-disabled**   | Switch icon             | Unchecked Disabled | `.switch:disabled .switch-icon`                      |
-| **--par-color-text-switch-target-checked-disabled**     | Switch icon             | Checked Disabled   | `.switch:disabled[aria-checked='true'] .switch-icon` |
+| **Token**                                               | **Color for**           | **State/Meaning**  |
+| ------------------------------------------------------- | ----------------------- | ------------------ |
+| **--par-color-bg-switch-target-handle**                 | Switch thumb background | Enabled            |
+| **--par-color-bg-switch-target-handle-disabled**        | Switch thumb background | Disabled           |
+| **--par-color-bg-switch-target-track-uncheck**          | Switch track background | Unchecked          |
+| **--par-color-bg-switch-target-track-uncheck-disabled** | Switch track background | Unchecked Disabled |
+| **--par-color-bg-switch-target-track-check**            | Switch track background | Checked            |
+| **--par-color-bg-switch-target-track-check-disabled**   | Switch track background | Checked Disabled   |
+| **--par-color-border-switch-unchecked**                 | Switch border           | Unchecked          |
+| **--par-color-border-switch-checked**                   | Switch border           | Checked            |
+| **--par-color-border-switch-unchecked-disabled**        | Switch border           | Unchecked Disabled |
+| **--par-color-border-switch-checked-disabled**          | Switch border           | Checked Disabled   |
+| **--par-color-text-switch-target-unchecked-enabled**    | Switch icon             | Unchecked          |
+| **--par-color-text-switch-target-checked-enabled**      | Switch icon             | Checked            |
+| **--par-color-text-switch-target-unchecked-disabled**   | Switch icon             | Unchecked Disabled |
+| **--par-color-text-switch-target-checked-disabled**     | Switch icon             | Checked Disabled   |
 
 ---
 
