--- a/app/tabs/dev/page.mdx
+++ b/app/tabs/dev/page.mdx
@@ -24,19 +24,19 @@ import CodePreview from '@components/showcase/CodePreview';
 
 ## Design Tokens for Tabs
 
-| **Token**                                      | **Color for**  | **State/Meaning**         | **CSS Selector(s)**    |
-| ---------------------------------------------- | -------------- | ------------------------- | ---------------------- |
-| **`--par-color-bg-tab-item-enabled`**          | Tab background | Default/Enabled           | `.tab-button`          |
-| **`--par-color-bg-tab-item-hovered`**          | Tab background | Hovered                   | `.tab-button:hover`    |
-| **`--par-color-bg-tab-item-neutral-active`**   | Tab background | Active/Selected (neutral) | `.tab-button.active`   |
-| **`--par-color-bg-tab-item-accent-active`**    | Tab background | Active/Selected (accent)  | `.tab-button.active`   |
-| **`--par-color-bg-tab-item-disabled`**         | Tab background | Disabled                  | `.tab-button:disabled` |
-| **`--par-color-border-tab-container`**         | Tabs border    | Any                       | `.tabs-nav-wrapper`    |
-| **`--par-color-text-tab-item-enabled`**        | Tab text       | Default/Enabled           | `.tab-button`          |
-| **`--par-color-text-tab-item-hovered`**        | Tab text       | Hovered                   | `.tab-button:hover`    |
-| **`--par-color-text-tab-item-neutral-active`** | Tab text       | Active/Selected (neutral) | `.tab-button.active`   |
-| **`--par-color-text-tab-item-accent-active`**  | Tab text       | Active/Selected (accent)  | `.tab-button.active`   |
-| **`--par-color-text-tab-item-disabled`**       | Tab text       | Disabled                  | `.tab-button:disabled` |
+| **Token**                                      | **Color for**  | **State/Meaning**         |
+| ---------------------------------------------- | -------------- | ------------------------- |
+| **`--par-color-bg-tab-item-enabled`**          | Tab background | Default/Enabled           |
+| **`--par-color-bg-tab-item-hovered`**          | Tab background | Hovered                   |
+| **`--par-color-bg-tab-item-neutral-active`**   | Tab background | Active/Selected (neutral) |
+| **`--par-color-bg-tab-item-accent-active`**    | Tab background | Active/Selected (accent)  |
+| **`--par-color-bg-tab-item-disabled`**         | Tab background | Disabled                  |
+| **`--par-color-border-tab-container`**         | Tabs border    | Any                       |
+| **`--par-color-text-tab-item-enabled`**        | Tab text       | Default/Enabled           |
+| **`--par-color-text-tab-item-hovered`**        | Tab text       | Hovered                   |
+| **`--par-color-text-tab-item-neutral-active`** | Tab text       | Active/Selected (neutral) |
+| **`--par-color-text-tab-item-accent-active`**  | Tab text       | Active/Selected (accent)  |
+| **`--par-color-text-tab-item-disabled`**       | Tab text       | Disabled                  |
 
 ---
 
