--- a/app/tag/dev/page.mdx
+++ b/app/tag/dev/page.mdx
@@ -9,21 +9,21 @@ import CodePreview from '@components/showcase/CodePreview';
 
 ## Design Tokens for Tag
 
-| **Token**                                | **Color for**            | **State/Meaning** | **CSS Selector(s)**            |
-| ---------------------------------------- | ------------------------ | ----------------- | ------------------------------ |
-| **--par-color-bg-tag**                   | Tag background           | Default/Enabled   | `.tag`                         |
-| **--par-color-bg-tag-hovered**           | Tag background           | Hovered           | `.tag:hover`                   |
-| **--par-color-bg-tag-selected**          | Tag background           | Selected          | `.tag.selected`                |
-| **--par-color-bg-tag-disabled**          | Tag background           | Disabled          | `.tag:disabled`                |
-| **--par-color-border-tag**               | Tag border               | Any               | `.tag`                         |
-| **--par-color-text-tag**                 | Tag text                 | Default/Enabled   | `.tag`                         |
-| **--par-color-text-tag-disabled**        | Tag text                 | Disabled          | `.tag:disabled`                |
-| **--par-color-icon-tag**                 | Tag icon                 | Any               | `.tag .tag-icon`               |
-| **--par-color-bg-tag-remove-hovered**    | Remove button background | Hovered           | `.tag .tag-close-btn:hover`    |
-| **--par-color-bg-tag-remove-pressed**    | Remove button background | Pressed           | `.tag .tag-close-btn:active`   |
-| **--par-color-bg-tag-remove-disabled**   | Remove button background | Disabled          | `.tag .tag-close-btn:disabled` |
-| **--par-color-text-tag-remove**          | Remove button text/icon  | Any               | `.tag .tag-close-btn`          |
-| **--par-color-text-tag-remove-disabled** | Remove button text/icon  | Disabled          | `.tag .tag-close-btn:disabled` |
+| **Token**                                | **Color for**            | **State/Meaning** |
+| ---------------------------------------- | ------------------------ | ----------------- |
+| **--par-color-bg-tag**                   | Tag background           | Default/Enabled   |
+| **--par-color-bg-tag-hovered**           | Tag background           | Hovered           |
+| **--par-color-bg-tag-selected**          | Tag background           | Selected          |
+| **--par-color-bg-tag-disabled**          | Tag background           | Disabled          |
+| **--par-color-border-tag**               | Tag border               | Any               |
+| **--par-color-text-tag**                 | Tag text                 | Default/Enabled   |
+| **--par-color-text-tag-disabled**        | Tag text                 | Disabled          |
+| **--par-color-icon-tag**                 | Tag icon                 | Any               |
+| **--par-color-bg-tag-remove-hovered**    | Remove button background | Hovered           |
+| **--par-color-bg-tag-remove-pressed**    | Remove button background | Pressed           |
+| **--par-color-bg-tag-remove-disabled**   | Remove button background | Disabled          |
+| **--par-color-text-tag-remove**          | Remove button text/icon  | Any               |
+| **--par-color-text-tag-remove-disabled** | Remove button text/icon  | Disabled          |
 
 ---
 
