--- a/app/tooltip/dev/page.mdx
+++ b/app/tooltip/dev/page.mdx
@@ -23,11 +23,11 @@ import CodePreview from '@components/showcase/CodePreview';
 
 ## Design Tokens for Tooltip
 
-| **Token**                            | **Color for**      | **State/Meaning** | **CSS Selector(s)** |
-| ------------------------------------ | ------------------ | ----------------- | ------------------- |
-| **--par-color-bg-surface-inverse**   | Tooltip background | Default           | `.tooltip-content`  |
-| **--par-color-text-primary-inverse** | Tooltip text       | Default           | `.tooltip-content`  |
-| **--par-color-bg-surface-inverse**   | Tooltip arrow      | Default           | `.tooltip-caret`    |
+| **Token**                            | **Color for**      | **State/Meaning** |
+| ------------------------------------ | ------------------ | ----------------- |
+| **--par-color-bg-surface-inverse**   | Tooltip background | Default           |
+| **--par-color-text-primary-inverse** | Tooltip text       | Default           |
+| **--par-color-bg-surface-inverse**   | Tooltip arrow      | Default           |
 
 ---
 
