--- a/app/badge/dev/page.mdx
+++ b/app/badge/dev/page.mdx
@@ -27,17 +27,17 @@ import CodePreview from '@components/showcase/CodePreview';
 
 ## Design Tokens for Badge
 
-| **Token**                                       | **Color for**               | **State/Meaning**          | **CSS Selector(s)**         |
-| ----------------------------------------------- | --------------------------- | -------------------------- | --------------------------- |
-| **--par-color-text-badge-solid-\<color\>**      | Badge text (solid)          | Solid badge, all colors    | `.badge.solid.\<color\>`    |
-| **--par-color-bg-badge-solid-\<color\>**        | Badge background (solid)    | Solid badge, all colors    | `.badge.solid.\<color\>`    |
-| **--par-color-border-badge-solid-\<color\>**    | Badge border (solid)        | Solid badge, all colors    | `.badge.solid.\<color\>`    |
-| **--par-color-text-badge-outlined-\<color\>**   | Badge text (outlined)       | Outlined badge, all colors | `.badge.outlined.\<color\>` |
-| **--par-color-bg-badge-outlined-\<color\>**     | Badge background (outlined) | Outlined badge, all colors | `.badge.outlined.\<color\>` |
-| **--par-color-border-badge-outlined-\<color\>** | Badge border (outlined)     | Outlined badge, all colors | `.badge.outlined.\<color\>` |
-| **--par-color-text-badge-glass-\<color\>**      | Badge text (glass)          | Glass badge, all colors    | `.badge.glass.\<color\>`    |
-| **--par-color-bg-badge-glass-\<color\>**        | Badge background (glass)    | Glass badge, all colors    | `.badge.glass.\<color\>`    |
-| **--par-color-border-badge-glass-\<color\>**    | Badge border (glass)        | Glass badge, all colors    | `.badge.glass.\<color\>`    |
+| **Token**                                       | **Color for**               | **State/Meaning**          |
+| ----------------------------------------------- | --------------------------- | -------------------------- |
+| **--par-color-text-badge-solid-\<color\>**      | Badge text (solid)          | Solid badge, all colors    |
+| **--par-color-bg-badge-solid-\<color\>**        | Badge background (solid)    | Solid badge, all colors    |
+| **--par-color-border-badge-solid-\<color\>**    | Badge border (solid)        | Solid badge, all colors    |
+| **--par-color-text-badge-outlined-\<color\>**   | Badge text (outlined)       | Outlined badge, all colors |
+| **--par-color-bg-badge-outlined-\<color\>**     | Badge background (outlined) | Outlined badge, all colors |
+| **--par-color-border-badge-outlined-\<color\>** | Badge border (outlined)     | Outlined badge, all colors |
+| **--par-color-text-badge-glass-\<color\>**      | Badge text (glass)          | Glass badge, all colors    |
+| **--par-color-bg-badge-glass-\<color\>**        | Badge background (glass)    | Glass badge, all colors    |
+| **--par-color-border-badge-glass-\<color\>**    | Badge border (glass)        | Glass badge, all colors    |
 
 > _Note: Replace `\<color\>` with supported color names: gray, red, green, yellow, blue, orange, cyan, violet, lime._
 
