--- a/app/base-input/dev/page.mdx
+++ b/app/base-input/dev/page.mdx
@@ -1,31 +1,31 @@
 ## BaseInput Design Tokens
 
-| **Token Name**                                   | **Description**                            | **State/Usage** | **CSS Selector(s)**                   |
-| ------------------------------------------------ | ------------------------------------------ | --------------- | ------------------------------------- |
-| `--par-color-text-field-filled`                  | Input text color                           | Enabled         | `.par-input`                          |
-| `--par-color-text-field-placeholder`             | Placeholder text color                     | Enabled         | `.par-input::placeholder`             |
-| `--par-color-text-field-disabled`                | Input text color                           | Disabled        | `.par-input:disabled`                 |
-| `--par-color-text-field-readonly`                | Input text color                           | Readonly        | `.par-input[readonly]`                |
-| `--par-color-text-field-invalid`                 | Input text color                           | Error           | `.par-input.error-state`              |
-| `--par-color-border-field-enabled`               | Input border color                         | Enabled         | `.par-input`                          |
-| `--par-color-border-field-disabled`              | Input border color                         | Disabled        | `.par-input:disabled`                 |
-| `--par-color-border-field-readonly`              | Input border color                         | Readonly        | `.par-input[readonly]`                |
-| `--par-color-border-field-invalid`               | Input border color                         | Error           | `.par-input.error-state`              |
-| `--par-color-bg-field-enabled`                   | Input background color                     | Enabled         | `.par-input`                          |
-| `--par-color-bg-field-disabled`                  | Input background color                     | Disabled        | `.par-input:disabled`                 |
-| `--par-color-bg-field-readonly`                  | Input background color                     | Readonly        | `.par-input[readonly]`                |
-| `--par-color-bg-field-invalid`                   | Input background color                     | Error           | `.par-input.error-state`              |
-| `--par-color-bg-field-button-enabled`            | Action button background                   | Enabled         | `.par-input-action-btn`               |
-| `--par-color-bg-field-button-hovered`            | Action button background                   | Hover           | `.par-input-action-btn:hover`         |
-| `--par-color-bg-field-button-pressed`            | Action button background                   | Pressed         | `.par-input-action-btn:active`        |
-| `--par-color-bg-field-button-disabled`           | Action button background                   | Disabled        | `.par-input-action-btn:disabled`      |
-| `--par-color-icon-field-button-enabled`          | Action button icon color                   | Enabled         | `.par-input-action-btn`               |
-| `--par-color-icon-field-button-hovered`          | Action button icon color                   | Hover           | `.par-input-action-btn:hover`         |
-| `--par-color-icon-field-button-pressed`          | Action button icon color                   | Pressed         | `.par-input-action-btn:active`        |
-| `--par-color-icon-field-button-disabled`         | Action button icon color                   | Disabled        | `.par-input-action-btn:disabled`      |
-| `--par-color-text-field-alternative-placeholder` | Placeholder text color (alternative theme) | Enabled (alt)   | `.par-input.alternative::placeholder` |
-| `--par-color-bg-field-alternative-enabled`       | Input background color (alternative theme) | Enabled (alt)   | `.par-input.alternative`              |
-| `--par-color-bg-field-alternative-disabled`      | Input background color (alternative theme) | Disabled (alt)  | `.par-input.alternative:disabled`     |
+| **Token Name**                                   | **Description**                            | **State/Usage** |
+| ------------------------------------------------ | ------------------------------------------ | --------------- |
+| `--par-color-text-field-filled`                  | Input text color                           | Enabled         |
+| `--par-color-text-field-placeholder`             | Placeholder text color                     | Enabled         |
+| `--par-color-text-field-disabled`                | Input text color                           | Disabled        |
+| `--par-color-text-field-readonly`                | Input text color                           | Readonly        |
+| `--par-color-text-field-invalid`                 | Input text color                           | Error           |
+| `--par-color-border-field-enabled`               | Input border color                         | Enabled         |
+| `--par-color-border-field-disabled`              | Input border color                         | Disabled        |
+| `--par-color-border-field-readonly`              | Input border color                         | Readonly        |
+| `--par-color-border-field-invalid`               | Input border color                         | Error           |
+| `--par-color-bg-field-enabled`                   | Input background color                     | Enabled         |
+| `--par-color-bg-field-disabled`                  | Input background color                     | Disabled        |
+| `--par-color-bg-field-readonly`                  | Input background color                     | Readonly        |
+| `--par-color-bg-field-invalid`                   | Input background color                     | Error           |
+| `--par-color-bg-field-button-enabled`            | Action button background                   | Enabled         |
+| `--par-color-bg-field-button-hovered`            | Action button background                   | Hover           |
+| `--par-color-bg-field-button-pressed`            | Action button background                   | Pressed         |
+| `--par-color-bg-field-button-disabled`           | Action button background                   | Disabled        |
+| `--par-color-icon-field-button-enabled`          | Action button icon color                   | Enabled         |
+| `--par-color-icon-field-button-hovered`          | Action button icon color                   | Hover           |
+| `--par-color-icon-field-button-pressed`          | Action button icon color                   | Pressed         |
+| `--par-color-icon-field-button-disabled`         | Action button icon color                   | Disabled        |
+| `--par-color-text-field-alternative-placeholder` | Placeholder text color (alternative theme) | Enabled (alt)   |
+| `--par-color-bg-field-alternative-enabled`       | Input background color (alternative theme) | Enabled (alt)   |
+| `--par-color-bg-field-alternative-disabled`      | Input background color (alternative theme) | Disabled (alt)  |
 
 ---
 
