--- a/app/file-item/dev/page.mdx
+++ b/app/file-item/dev/page.mdx
@@ -15,10 +15,10 @@ import CodePreview from '@components/showcase/CodePreview';
 
 ## Design Tokens for FileItem
 
-| **Token**                           | **Color for**       | **State/Meaning** | **CSS Selector(s)**                |
-| ----------------------------------- | ------------------- | ----------------- | ---------------------------------- |
-| **--par-color-bg-fileitem-enabled** | FileItem background | Enabled/Default   | `.file-item`, `.file-item.loading` |
-| **--par-color-bg-fileitem-failed**  | FileItem background | Failed/Error      | `.file-item.error`                 |
+| **Token**                           | **Color for**       | **State/Meaning** |
+| ----------------------------------- | ------------------- | ----------------- |
+| **--par-color-bg-fileitem-enabled** | FileItem background | Enabled/Default   |
+| **--par-color-bg-fileitem-failed**  | FileItem background | Failed/Error      |
 
 ---
 
@@ -30,15 +30,15 @@ _FileItem also inherits design tokens from the Input and Progress components. Fo
 
 ### `<FileItem />`
 
-| **Prop**      | **Type**                                 | **Default**      | **Description**                                                        |
-| ------------- | ---------------------------------------- | ---------------- | ---------------------------------------------------------------------- |
-| **fileName**  | string                                   | "Choose file"   | The name of the file to display.                                       |
-| **fileSize**  | number                                   | 0                | The size of the file in bytes.                                         |
-| **status**    | 'error' \| 'success' \| 'completed'      | 'completed'      | The status of the file item.                                           |
-| **loading**   | number                                   | 0                | Loading progress percentage (0-100).                                   |
-| **disabled**  | boolean                                  | false            | Whether the file item is disabled.                                     |
-| **onRetry**   | () => void                               |                  | Callback when the retry action is performed (on error).                |
-| **onRemove**  | () => void                               |                  | Callback when the remove action is performed.                          |
-| **...divProps** | HTMLDivElement props                   |                  | All native div props (className, style, ...)                           |
+| **Prop**        | **Type**                            | **Default**   | **Description**                                         |
+| --------------- | ----------------------------------- | ------------- | ------------------------------------------------------- |
+| **fileName**    | string                              | "Choose file" | The name of the file to display.                        |
+| **fileSize**    | number                              | 0             | The size of the file in bytes.                          |
+| **status**      | 'error' \| 'success' \| 'completed' | 'completed'   | The status of the file item.                            |
+| **loading**     | number                              | 0             | Loading progress percentage (0-100).                    |
+| **disabled**    | boolean                             | false         | Whether the file item is disabled.                      |
+| **onRetry**     | () => void                          |               | Callback when the retry action is performed (on error). |
+| **onRemove**    | () => void                          |               | Callback when the remove action is performed.           |
+| **...divProps** | HTMLDivElement props                |               | All native div props (className, style, ...)            |
 
 > _Note:_ _FileItem_ inherits all native props from HTMLDivElement.
