--- a/app/menu/dev/page.mdx
+++ b/app/menu/dev/page.mdx
@@ -19,25 +19,25 @@ import CodePreview from '@components/showcase/CodePreview';
 
 ## Design Tokens for Menu
 
-| **Token**                                                     | **Color for**        | **State/Meaning**              | **CSS Selector(s)**                                    |
-| ------------------------------------------------------------- | -------------------- | ------------------------------ | ------------------------------------------------------ |
-| **--par-color-bg-surface-item-enabled**                       | Menu item background | Default/Enabled                | `.menu-item`                                           |
-| **--par-color-bg-surface-item-hovered**                       | Menu item background | Hovered                        | `.menu-item:hover`                                     |
-| **--par-color-bg-surface-item-neutral-subtle-selected**       | Menu item background | Selected (neutral, subtle)     | `.menu-item.neutral.subtle[aria-checked='true']`       |
-| **--par-color-bg-surface-item-neutral-pronounced-selected**   | Menu item background | Selected (neutral, pronounced) | `.menu-item.neutral.pronounced[aria-checked='true']`   |
-| **--par-color-bg-surface-item-accent-subtle-selected**        | Menu item background | Selected (accent, subtle)      | `.menu-item.accent.subtle[aria-checked='true']`        |
-| **--par-color-bg-surface-item-accent-pronounced-selected**    | Menu item background | Selected (accent, pronounced)  | `.menu-item.accent.pronounced[aria-checked='true']`    |
-| **--par-color-bg-surface-item-disabled**                      | Menu item background | Disabled                       | `.menu-item[aria-disabled='true']`                     |
-| **--par-color-text-surface-item-enabled**                     | Menu item text       | Default/Enabled                | `.menu-item`                                           |
-| **--par-color-text-surface-item-disabled**                    | Menu item text       | Disabled                       | `.menu-item[aria-disabled='true']`                     |
-| **--par-color-text-surface-item-neutral-subtle-selected**     | Menu item text       | Selected (neutral, subtle)     | `.menu-item.neutral.subtle[aria-checked='true']`       |
-| **--par-color-text-surface-item-neutral-pronounced-selected** | Menu item text       | Selected (neutral, pronounced) | `.menu-item.neutral.pronounced[aria-checked='true']`   |
-| **--par-color-text-surface-item-accent-subtle-selected**      | Menu item text       | Selected (accent, subtle)      | `.menu-item.accent.subtle[aria-checked='true']`        |
-| **--par-color-text-surface-item-accent-pronounced-selected**  | Menu item text       | Selected (accent, pronounced)  | `.menu-item.accent.pronounced[aria-checked='true']`    |
-| **--par-color-icon-field-button-enabled**                     | Menu item icon       | Default/Enabled                | `.menu-item .menu-item-icon`                           |
-| **--par-color-border-surface**                                | Border               | Default                        | `.menu, .menu-header, .menu-footer, .menu-group-label` |
-| **--par-color-divider-menu**                                  | Divider              | Default                        | `.menu-divider`                                        |
-| **--par-color-text-secondary**                                | Group label text     | Default                        | `.menu-group-label`                                    |
+| **Token**                                                     | **Color for**        | **State/Meaning**              |
+| ------------------------------------------------------------- | -------------------- | ------------------------------ |
+| **--par-color-bg-surface-item-enabled**                       | Menu item background | Default/Enabled                |
+| **--par-color-bg-surface-item-hovered**                       | Menu item background | Hovered                        |
+| **--par-color-bg-surface-item-neutral-subtle-selected**       | Menu item background | Selected (neutral, subtle)     |
+| **--par-color-bg-surface-item-neutral-pronounced-selected**   | Menu item background | Selected (neutral, pronounced) |
+| **--par-color-bg-surface-item-accent-subtle-selected**        | Menu item background | Selected (accent, subtle)      |
+| **--par-color-bg-surface-item-accent-pronounced-selected**    | Menu item background | Selected (accent, pronounced)  |
+| **--par-color-bg-surface-item-disabled**                      | Menu item background | Disabled                       |
+| **--par-color-text-surface-item-enabled**                     | Menu item text       | Default/Enabled                |
+| **--par-color-text-surface-item-disabled**                    | Menu item text       | Disabled                       |
+| **--par-color-text-surface-item-neutral-subtle-selected**     | Menu item text       | Selected (neutral, subtle)     |
+| **--par-color-text-surface-item-neutral-pronounced-selected** | Menu item text       | Selected (neutral, pronounced) |
+| **--par-color-text-surface-item-accent-subtle-selected**      | Menu item text       | Selected (accent, subtle)      |
+| **--par-color-text-surface-item-accent-pronounced-selected**  | Menu item text       | Selected (accent, pronounced)  |
+| **--par-color-icon-field-button-enabled**                     | Menu item icon       | Default/Enabled                |
+| **--par-color-border-surface**                                | Border               | Default                        |
+| **--par-color-divider-menu**                                  | Divider              | Default                        |
+| **--par-color-text-secondary**                                | Group label text     | Default                        |
 
 ---
 
