--- a/app/progress/dev/page.mdx
+++ b/app/progress/dev/page.mdx
@@ -98,13 +98,13 @@ import CodePreview from '@components/showcase/CodePreview';
 
 ## Design Tokens for Progress
 
-| **Token**                                     | **Color for**               | **State/Meaning** | **CSS Selector(s)**                        |
-| --------------------------------------------- | --------------------------- | ----------------- | ------------------------------------------ |
-| **--par-color-progress-track**                | Progress track background   | Default/Enabled   | `.progress-track`                          |
-| **--par-color-progress-thumb-active-neutral** | Progress bar fill (neutral) | Active            | `.progress.active.neutral .progress-thumb` |
-| **--par-color-progress-thumb-active-accent**  | Progress bar fill (accent)  | Active            | `.progress.active.accent .progress-thumb`  |
-| **--par-color-progress-thumb-success**        | Progress bar fill           | Success/Complete  | `.progress.success .progress-thumb`        |
-| **--par-color-progress-thumb-error**          | Progress bar fill           | Error/Failed      | `.progress.error .progress-thumb`          |
+| **Token**                                     | **Color for**               | **State/Meaning** |
+| --------------------------------------------- | --------------------------- | ----------------- |
+| **--par-color-progress-track**                | Progress track background   | Default/Enabled   |
+| **--par-color-progress-thumb-active-neutral** | Progress bar fill (neutral) | Active            |
+| **--par-color-progress-thumb-active-accent**  | Progress bar fill (accent)  | Active            |
+| **--par-color-progress-thumb-success**        | Progress bar fill           | Success/Complete  |
+| **--par-color-progress-thumb-error**          | Progress bar fill           | Error/Failed      |
 
 ---
 
