--- a/app/select/dev/page.mdx
+++ b/app/select/dev/page.mdx
@@ -26,28 +26,28 @@ import CodePreview from '@components/showcase/CodePreview';
 
 ## Design Tokens for Select
 
-| **Token**                                  | **Color for**                | **State/Meaning** | **CSS Selector(s)**                                                             |
-| ------------------------------------------ | ---------------------------- | ----------------- | ------------------------------------------------------------------------------- |
-| **--par-color-bg-field-enabled**           | Select field background      | Enabled           | `select.native-select:enabled`                                                  |
-| **--par-color-bg-field-hovered**           | Select field background      | Hovered           | `select.native-select:hover`                                                    |
-| **--par-color-bg-field-disabled**          | Select field background      | Disabled          | `select.native-select:disabled`                                                 |
-| **--par-color-bg-field-readonly**          | Select field background      | Readonly          | `select.native-select[readonly]`                                                |
-| **--par-color-bg-field-invalid**           | Select field background      | Invalid/Error     | `select.native-select.invalid`                                                  |
-| **--par-color-border-field-enabled**       | Select field border          | Enabled           | `select.native-select:enabled`                                                  |
-| **--par-color-border-field-hovered**       | Select field border          | Hovered           | `select.native-select:hover`                                                    |
-| **--par-color-border-field-disabled**      | Select field border          | Disabled          | `select.native-select:disabled`                                                 |
-| **--par-color-border-field-invalid**       | Select field border          | Invalid/Error     | `select.native-select.invalid`                                                  |
-| **--par-color-border-field-focused**       | Select field border          | Focused           | `select.native-select:focus`                                                    |
-| **--par-color-text-field-placeholder**     | Placeholder text             | Any               | `select.native-select::placeholder`, `.select-input.non-value`, `.select-label` |
-| **--par-color-text-field-filled**          | Select field text            | Filled            | `select.native-select`, `.select-input`                                         |
-| **--par-color-text-field-label**           | Label text                   | Any               | `.select-label`                                                                 |
-| **--par-color-text-field-disabled**        | Select field text            | Disabled          | `select.native-select:disabled`                                                 |
-| **--par-color-text-field-readonly**        | Select field text            | Readonly          | `select.native-select[readonly]`                                                |
-| **--par-color-text-field-invalid**         | Select field text            | Invalid/Error     | `select.native-select.invalid`                                                  |
-| **--par-color-icon-field-button-enabled**  | Icon color (button enabled)  | Enabled           | `.arrow-select-btn:enabled`, `.clear-button:enabled`                            |
-| **--par-color-icon-field-button-hovered**  | Icon color (button hovered)  | Hovered           | `.arrow-select-btn:hover`, `.clear-button:hover`                                |
-| **--par-color-icon-field-button-pressed**  | Icon color (button pressed)  | Pressed           | `.arrow-select-btn:active`, `.clear-button:active`                              |
-| **--par-color-icon-field-button-disabled** | Icon color (button disabled) | Disabled          | `.arrow-select-btn:disabled`, `.clear-button:disabled`                          |
+| **Token**                                  | **Color for**                | **State/Meaning** |
+| ------------------------------------------ | ---------------------------- | ----------------- |
+| **--par-color-bg-field-enabled**           | Select field background      | Enabled           |
+| **--par-color-bg-field-hovered**           | Select field background      | Hovered           |
+| **--par-color-bg-field-disabled**          | Select field background      | Disabled          |
+| **--par-color-bg-field-readonly**          | Select field background      | Readonly          |
+| **--par-color-bg-field-invalid**           | Select field background      | Invalid/Error     |
+| **--par-color-border-field-enabled**       | Select field border          | Enabled           |
+| **--par-color-border-field-hovered**       | Select field border          | Hovered           |
+| **--par-color-border-field-disabled**      | Select field border          | Disabled          |
+| **--par-color-border-field-invalid**       | Select field border          | Invalid/Error     |
+| **--par-color-border-field-focused**       | Select field border          | Focused           |
+| **--par-color-text-field-placeholder**     | Placeholder text             | Any               |
+| **--par-color-text-field-filled**          | Select field text            | Filled            |
+| **--par-color-text-field-label**           | Label text                   | Any               |
+| **--par-color-text-field-disabled**        | Select field text            | Disabled          |
+| **--par-color-text-field-readonly**        | Select field text            | Readonly          |
+| **--par-color-text-field-invalid**         | Select field text            | Invalid/Error     |
+| **--par-color-icon-field-button-enabled**  | Icon color (button enabled)  | Enabled           |
+| **--par-color-icon-field-button-hovered**  | Icon color (button hovered)  | Hovered           |
+| **--par-color-icon-field-button-pressed**  | Icon color (button pressed)  | Pressed           |
+| **--par-color-icon-field-button-disabled** | Icon color (button disabled) | Disabled          |
 
 ---
 
