--- a/app/slider/dev/page.mdx
+++ b/app/slider/dev/page.mdx
@@ -45,17 +45,17 @@ import CodePreview from '@components/showcase/CodePreview';
 
 ## Design Tokens for Slider
 
-| **Token**                                              | **Color for**             | **State/Meaning** | **CSS Selector(s)**                                                                          |
-| ------------------------------------------------------ | ------------------------- | ----------------- | -------------------------------------------------------------------------------------------- |
-| **--par-color-border-slider-track-enabled**            | Slider track              | Default/Enabled   | `.slider-track`                                                                              |
-| **--par-color-border-slider-progress-neutral-enabled** | Slider progress (neutral) | Default/Enabled   | `.slider-progress`                                                                           |
-| **--par-color-border-slider-progress-accent-enabled**  | Slider progress (accent)  | Default/Enabled   | `.slider-progress.accent`                                                                    |
-| **--par-color-border-slider-thumb-enabled**            | Slider thumb border       | Default/Enabled   | `input[type=range].par-input-slider::-webkit-slider-thumb`, `::-moz-range-thumb`             |
-| **--par-color-bg-slider-thumb-enabled**                | Slider thumb background   | Default/Enabled   | `input[type=range].par-input-slider::-webkit-slider-thumb`, `::-moz-range-thumb`             |
-| **--par-color-bg-slider-state-layer-hovered**          | Thumb hover state layer   | Hovered           | `input[type=range].par-input-slider:hover::-webkit-slider-thumb`, `::-moz-range-thumb:hover` |
-| **--par-color-border-slider-discrete-neutral-active**  | Mark dot (in range)       | Active            | `.slider-dot.in-range`                                                                       |
-| **--par-color-border-slider-discrete-neutral-enabled** | Mark dot (out range)      | Default           | `.slider-dot.out-range`                                                                      |
-| **--par-color-text-primary**                           | Indicator text            | Any               | `.slider-thumb-indicator-text`                                                               |
+| **Token**                                              | **Color for**             | **State/Meaning** |
+| ------------------------------------------------------ | ------------------------- | ----------------- |
+| **--par-color-border-slider-track-enabled**            | Slider track              | Default/Enabled   |
+| **--par-color-border-slider-progress-neutral-enabled** | Slider progress (neutral) | Default/Enabled   |
+| **--par-color-border-slider-progress-accent-enabled**  | Slider progress (accent)  | Default/Enabled   |
+| **--par-color-border-slider-thumb-enabled**            | Slider thumb border       | Default/Enabled   |
+| **--par-color-bg-slider-thumb-enabled**                | Slider thumb background   | Default/Enabled   |
+| **--par-color-bg-slider-state-layer-hovered**          | Thumb hover state layer   | Hovered           |
+| **--par-color-border-slider-discrete-neutral-active**  | Mark dot (in range)       | Active            |
+| **--par-color-border-slider-discrete-neutral-enabled** | Mark dot (out range)      | Default           |
+| **--par-color-text-primary**                           | Indicator text            | Any               |
 
 ---
 
