--- a/app/table/dev/page.mdx
+++ b/app/table/dev/page.mdx
@@ -21,20 +21,20 @@ import CodePreview from '@components/showcase/CodePreview';
 
 ## Design Tokens for Table
 
-| **Token**                                           | **Color for**          | **State/Meaning** | **CSS Selector(s)**                                                                      |
-| --------------------------------------------------- | ---------------------- | ----------------- | ---------------------------------------------------------------------------------------- |
-| **--par-color-bg-table**                            | Table background       | Default/Enabled   | `.par-table`, `.table-wrapper`                                                           |
-| **--par-color-bg-table-header-cell-item-enabled**   | Header cell background | Enabled           | `.table-head-cell`                                                                       |
-| **--par-color-bg-table-header-cell-item-hovered**   | Header cell background | Hovered           | `.table-head-cell.sortable:hover`                                                        |
-| **--par-color-bg-table-header-cell-item-active**    | Header cell background | Active            | `.table-head-cell.sortable:active`                                                       |
-| **--par-color-bg-table-body-row-item-enabled**      | Row background         | Enabled           | `.table-body-row`                                                                        |
-| **--par-color-bg-table-body-row-item-hovered**      | Row background         | Hovered           | `.table-body-row:hover`                                                                  |
-| **--par-color-bg-table-batch-action-selected-item** | Row background         | Selected          | `.table-body-row.selected`, `.table-batch-actions`                                       |
-| **--par-color-border-table**                        | Table border           | Any               | `.par-table`, `.table-head-cell-wrapper`, `.table-body-cell-wrapper`, `.table-container` |
-| **--par-color-text-table-header-cell-item-enabled** | Header cell text       | Enabled           | `.table-head`                                                                            |
-| **--par-color-text-table-header-cell-item-hovered** | Header cell text       | Hovered           | `.table-head-cell.sortable:hover`                                                        |
-| **--par-color-text-table-header-cell-item-active**  | Header cell text       | Active            | `.table-sort-icon .active`                                                               |
-| **--par-color-text-table-content-item**             | Table cell text        | Any               | `.table-body-cell-wrapper`, `.table-footer`                                              |
+| **Token**                                           | **Color for**          | **State/Meaning** |
+| --------------------------------------------------- | ---------------------- | ----------------- |
+| **--par-color-bg-table**                            | Table background       | Default/Enabled   |
+| **--par-color-bg-table-header-cell-item-enabled**   | Header cell background | Enabled           |
+| **--par-color-bg-table-header-cell-item-hovered**   | Header cell background | Hovered           |
+| **--par-color-bg-table-header-cell-item-active**    | Header cell background | Active            |
+| **--par-color-bg-table-body-row-item-enabled**      | Row background         | Enabled           |
+| **--par-color-bg-table-body-row-item-hovered**      | Row background         | Hovered           |
+| **--par-color-bg-table-batch-action-selected-item** | Row background         | Selected          |
+| **--par-color-border-table**                        | Table border           | Any               |
+| **--par-color-text-table-header-cell-item-enabled** | Header cell text       | Enabled           |
+| **--par-color-text-table-header-cell-item-hovered** | Header cell text       | Hovered           |
+| **--par-color-text-table-header-cell-item-active**  | Header cell text       | Active            |
+| **--par-color-text-table-content-item**             | Table cell text        | Any               |
 
 ---
 
