--- a/app/toast/dev/page.mdx
+++ b/app/toast/dev/page.mdx
@@ -62,25 +62,25 @@ import { ToastContainer } from 'beta-parity-react/ui/Toast';
 
 ## Design Tokens for Toast
 
-| **Token**                                              | **Color for**    | **State/Meaning**     | **CSS Selector(s)**                        |
-| ------------------------------------------------------ | ---------------- | --------------------- | ------------------------------------------ |
-| **--par-color-bg-toast-emphasis-high-generic**         | Toast background | Generic               | `.toast.emphasis-high.generic`             |
-| **--par-color-bg-toast-emphasis-high-information**     | Toast background | Information           | `.toast.emphasis-high.information`         |
-| **--par-color-bg-toast-emphasis-high-affirmative**     | Toast background | Affirmative (success) | `.toast.emphasis-high.affirmative`         |
-| **--par-color-bg-toast-emphasis-high-cautionary**      | Toast background | Cautionary (warning)  | `.toast.emphasis-high.cautionary`          |
-| **--par-color-bg-toast-emphasis-high-adverse**         | Toast background | Adverse (error)       | `.toast.emphasis-high.adverse`             |
-| **--par-color-bg-emphasis-normal**                     | Toast background | Normal emphasis       | `.toast.emphasis-normal`                   |
-| **--par-color-border-toast-emphasis-high-generic**     | Toast border     | Generic               | `.toast.emphasis-high.generic`             |
-| **--par-color-border-toast-emphasis-high-info**        | Toast border     | Information           | `.toast.emphasis-high.information`         |
-| **--par-color-border-toast-emphasis-high-affirmative** | Toast border     | Affirmative (success) | `.toast.emphasis-high.affirmative`         |
-| **--par-color-border-toast-emphasis-high-cautionary**  | Toast border     | Cautionary (warning)  | `.toast.emphasis-high.cautionary`          |
-| **--par-color-border-toast-emphasis-high-adverse**     | Toast border     | Adverse (error)       | `.toast.emphasis-high.adverse`             |
-| **--par-color-border-emphasis-normal**                 | Toast border     | Normal emphasis       | `.toast.emphasis-normal`                   |
-| **--par-color-border-progress-bar-generic**            | Progress bar     | Generic               | `.toast.generic > .toast-progress-bar`     |
-| **--par-color-border-progress-bar-info**               | Progress bar     | Information           | `.toast.information > .toast-progress-bar` |
-| **--par-color-border-progress-bar-affirmative**        | Progress bar     | Affirmative (success) | `.toast.affirmative > .toast-progress-bar` |
-| **--par-color-border-progress-bar-cautionary**         | Progress bar     | Cautionary (warning)  | `.toast.cautionary > .toast-progress-bar`  |
-| **--par-color-border-progress-bar-adverse**            | Progress bar     | Adverse (error)       | `.toast.adverse > .toast-progress-bar`     |
+| **Token**                                              | **Color for**    | **State/Meaning**     |
+| ------------------------------------------------------ | ---------------- | --------------------- |
+| **--par-color-bg-toast-emphasis-high-generic**         | Toast background | Generic               |
+| **--par-color-bg-toast-emphasis-high-information**     | Toast background | Information           |
+| **--par-color-bg-toast-emphasis-high-affirmative**     | Toast background | Affirmative (success) |
+| **--par-color-bg-toast-emphasis-high-cautionary**      | Toast background | Cautionary (warning)  |
+| **--par-color-bg-toast-emphasis-high-adverse**         | Toast background | Adverse (error)       |
+| **--par-color-bg-emphasis-normal**                     | Toast background | Normal emphasis       |
+| **--par-color-border-toast-emphasis-high-generic**     | Toast border     | Generic               |
+| **--par-color-border-toast-emphasis-high-info**        | Toast border     | Information           |
+| **--par-color-border-toast-emphasis-high-affirmative** | Toast border     | Affirmative (success) |
+| **--par-color-border-toast-emphasis-high-cautionary**  | Toast border     | Cautionary (warning)  |
+| **--par-color-border-toast-emphasis-high-adverse**     | Toast border     | Adverse (error)       |
+| **--par-color-border-emphasis-normal**                 | Toast border     | Normal emphasis       |
+| **--par-color-border-progress-bar-generic**            | Progress bar     | Generic               |
+| **--par-color-border-progress-bar-info**               | Progress bar     | Information           |
+| **--par-color-border-progress-bar-affirmative**        | Progress bar     | Affirmative (success) |
+| **--par-color-border-progress-bar-cautionary**         | Progress bar     | Cautionary (warning)  |
+| **--par-color-border-progress-bar-adverse**            | Progress bar     | Adverse (error)       |
 
 ---
 
