--- a/app/tree-navigation/dev/page.mdx
+++ b/app/tree-navigation/dev/page.mdx
@@ -17,22 +17,22 @@ import CodePreview from '@components/showcase/CodePreview';
 
 ## Design Tokens for TreeNavigation
 
-| **Token**                                                          | **Color for**                    | **State/Meaning**  | **CSS Selector(s)**                                            |
-| ------------------------------------------------------------------ | -------------------------------- | ------------------ | -------------------------------------------------------------- |
-| **--par-color-bg-tree-navigation-item**                            | Tree item background             | Default/Enabled    | `.tree-navigation`                                             |
-| **--par-color-bg-tree-navigation-item-neutral-selected**           | Tree item background             | Selected (neutral) | `.tree-navigation-item-active .active`                         |
-| **--par-color-bg-tree-navigation-item-accent-selected**            | Tree item background             | Selected (accent)  | `.tree-navigation.accent .tree-navigation-item-active .active` |
-| **--par-color-bg-tree-navigation-button-neutral-hovered**          | Tree item button background      | Hovered (neutral)  | `.tree-navigation-icon-button:hover`                           |
-| **--par-color-bg-tree-navigation-button-accent-hovered**           | Tree item button background      | Hovered (accent)   | `.tree-navigation.accent .tree-navigation-icon-button:hover`   |
-| **--par-color-border-tree-navigation**                             | Tree border                      | Any                | `.tree-navigation, .tree-navigation-item`                      |
-| **--par-color-text-tree-navigation-content-item-enabled**          | Tree item text                   | Default/Enabled    | `.tree-navigation-item`                                        |
-| **--par-color-text-tree-navigation-content-item-neutral-selected** | Tree item text                   | Selected (neutral) | `.tree-navigation-item-active .active`                         |
-| **--par-color-text-tree-navigation-content-item-accent-selected**  | Tree item text                   | Selected (accent)  | `.tree-navigation.accent .tree-navigation-item-active .active` |
-| **--par-color-text-tree-navigation-content-item-disabled**         | Tree item text                   | Disabled           | `.tree-navigation-item[aria-disabled="true"]`                  |
-| **--par-color-text-tree-navigation-content-item-hovered**          | Tree item text                   | Hovered            | `.tree-navigation-item-content:hover`                          |
-| **--par-color-text-tree-navigation-content-item-pressed**          | Tree item text                   | Pressed            | `.tree-navigation-item-content:active`                         |
-| **--par-color-bg-tree-navigation-item-icon-button**                | Tree item icon button background | Any                | `.tree-navigation-icon-button`                                 |
-| **--par-color-text-tree-navigation-content-item-icon-button**      | Tree item icon button text       | Any                | `.tree-navigation-icon-button`                                 |
+| **Token**                                                          | **Color for**                    | **State/Meaning**  |
+| ------------------------------------------------------------------ | -------------------------------- | ------------------ |
+| **--par-color-bg-tree-navigation-item**                            | Tree item background             | Default/Enabled    |
+| **--par-color-bg-tree-navigation-item-neutral-selected**           | Tree item background             | Selected (neutral) |
+| **--par-color-bg-tree-navigation-item-accent-selected**            | Tree item background             | Selected (accent)  |
+| **--par-color-bg-tree-navigation-button-neutral-hovered**          | Tree item button background      | Hovered (neutral)  |
+| **--par-color-bg-tree-navigation-button-accent-hovered**           | Tree item button background      | Hovered (accent)   |
+| **--par-color-border-tree-navigation**                             | Tree border                      | Any                |
+| **--par-color-text-tree-navigation-content-item-enabled**          | Tree item text                   | Default/Enabled    |
+| **--par-color-text-tree-navigation-content-item-neutral-selected** | Tree item text                   | Selected (neutral) |
+| **--par-color-text-tree-navigation-content-item-accent-selected**  | Tree item text                   | Selected (accent)  |
+| **--par-color-text-tree-navigation-content-item-disabled**         | Tree item text                   | Disabled           |
+| **--par-color-text-tree-navigation-content-item-hovered**          | Tree item text                   | Hovered            |
+| **--par-color-text-tree-navigation-content-item-pressed**          | Tree item text                   | Pressed            |
+| **--par-color-bg-tree-navigation-item-icon-button**                | Tree item icon button background | Any                |
+| **--par-color-text-tree-navigation-content-item-icon-button**      | Tree item icon button text       | Any                |
 
 ---
 
